--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         <h1 class="title">Daniela Web Developer</h1>
     </header>
     <main class="main">
-        <section><h2>About me</h2></section>
-        <section><h2>Projects</h2></section>
-        <section><h2>Contact me</h2></section>
+        <a><h2>Connect with me</h2></a>
+        <a href="https://github.com/DanielaCueto" target="blank" ><h2>Projects</h2><img src="./images-logos/github-alt-brands.svg" width="30px" ></a>
+        <a href="mailto:danielasalazarcueto@hotmail.com"><h2>Contact me</h2><img src="./images-logos/at-light.svg" width="30px"></a>
     </main>
 </body>
 </html>
