changes logos instead words

--- a/index.html
+++ b/index.html
@@ -1,24 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inspiration&family=Rock+3D&display=swap" rel="stylesheet">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inspiration&family=Rock+3D&display=swap"
+      rel="stylesheet"
+    />
+
     <title>www.danielacueto.com</title>
-</head>
-<body>
+  </head>
+  <body>
     <header class="header">
-        <h1 class="title">Daniela Web Developer</h1>
+      <h1 class="title">Daniela Web Developer</h1>
     </header>
     <main class="main">
-        <a><h2>Connect with me</h2></a>
-        <a href="https://github.com/DanielaCueto" target="blank" ><h2>Projects</h2><img src="./images-logos/github-alt-brands.svg" width="30px" ></a>
-        <a href="mailto:danielasalazarcueto@hotmail.com"><h2>Contact me</h2><img src="./images-logos/at-light.svg" width="30px"></a>
+      <ul class="list">
+        
+        <li class="list--item">
+          <a
+            class="list--item__link"
+            href="mailto:danielasalazarcueto@hotmail.com"
+            ><img src="./images-logos/envelope-regular.svg" alt="Email" width="30px"
+          /></a>
+        </li>
+
+        <li class="list--item">
+          <a href="https://github.com/DanielaCueto" target="blank"
+            ><img src="./images-logos/github-alt-brands.svg" alt="Github" width="30px"
+          /></a>
+        </li>
+        <li class="list--item">
+          <a
+            href="https://www.linkedin.com/in/danielasalazarcueto/"
+            target="blank"
+            >
+            <img
+              src="./images-logos/linkedin-in-brands.svg"
+              alt="Linkedin"
+              width="30px"
+          /></a>
+        </li>
+        <li class="list--item">
+          <a href="www.instagram.com/danielacuet0_" target="blank"
+            >
+            <img src="./images-logos/instagram-brands.svg" alt="Instagram" width="30px"
+          /></a>
+        </li>
+        <li><a href="www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
+      </ul>
     </main>
-</body>
+  </body>
 </html>
