add aboutme and resize all the web

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       <h1 class="title">Daniela Web Developer</h1>
     </header>
     <main class="main">
+        <p class="main--aboutme">Hi there! I'm Daniela,  I used to be a scrub nurse and now I'm a junior front-end developer based in Lisbon, Portugal. Here you can find links to Github where I have my projects and also reach me through social media. I'm currently looking for my first job in the Tech industry. I enjoy working with HTML5, CSS3, JavaScript, React & Node.js. </p>
       <ul class="list">
         
         <li class="list--item">
@@ -36,7 +37,7 @@
         </li>
         <li class="list--item">
           <a
-            href="https://www.linkedin.com/in/danielasalazarcueto/"
+            href="https://www.linkedin.com/in/danielasalazarcueto"
             target="blank"
             >
             <img
@@ -46,12 +47,12 @@
           /></a>
         </li>
         <li class="list--item">
-          <a href="www.instagram.com/danielacuet0_" target="blank"
+          <a href="https://www.instagram.com/danielacuet0_" target="blank"
             >
             <img src="./images-logos/instagram-brands.svg" alt="Instagram" width="30px"
           /></a>
         </li>
-        <li><a href="www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
+        <li><a href="https://www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
       </ul>
     </main>
   </body>
