add folder js and some changes in css

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
       <h1 class="title">Daniela Web Developer</h1>
     </header>
     <main class="main">
-        <p class="main--aboutme">Hi there! I'm Daniela,  I used to be a scrub nurse and now I'm a junior front-end developer based in Lisbon, Portugal. Here you can find links to Github where I have my projects and also reach me through social media. I'm currently looking for my first job in the Tech industry. I enjoy working with HTML5, CSS3, JavaScript, React & Node.js. </p>
+        <p class="main__aboutme">Hi there! I'm Daniela,  I used to be a scrub nurse and now I'm a junior front-end developer based in Lisbon, Portugal. Here you can find links to Github where I have my projects and also reach me through social media. I'm currently looking for my first job in the Tech industry. I enjoy working with HTML5, CSS3, JavaScript, React & Node.js. </p>
       <ul class="list">
         
-        <li class="list--item">
+        <li class="list__item">
           <a
-            class="list--item__link"
+            class="list__item--link"
             href="mailto:danielasalazarcueto@hotmail.com"
             ><img src="./images-logos/envelope-regular.svg" alt="Email" width="30px"
           /></a>
         </li>
 
-        <li class="list--item">
+        <li class="list__item">
           <a href="https://github.com/DanielaCueto" target="blank"
             ><img src="./images-logos/github-alt-brands.svg" alt="Github" width="30px"
           /></a>
         </li>
-        <li class="list--item">
+        <li class="list__item">
           <a
             href="https://www.linkedin.com/in/danielasalazarcueto"
             target="blank"
@@ -46,7 +46,7 @@
               width="30px"
           /></a>
         </li>
-        <li class="list--item">
+        <li class="list__item">
           <a href="https://www.instagram.com/danielacuet0_" target="blank"
             >
             <img src="./images-logos/instagram-brands.svg" alt="Instagram" width="30px"
