change list item

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <img src="./images-logos/instagram-brands.svg" alt="Instagram" width="30px"
           /></a>
         </li>
-        <li><a href="https://www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
+        <li class="list__item"><a href="https://www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
       </ul>
     </main>
   </body>
