add dark mode and interaction with js

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <header class="header">
       <h1 class="title">Daniela Web Developer</h1>
     </header>
+
+    <button class="buttonmode"></button>
     <main class="main">
         <p class="main__aboutme">Hi there! I'm Daniela,  I used to be a scrub nurse and now I'm a junior front-end developer based in Lisbon, Portugal. Here you can find links to Github where I have my projects and also reach me through social media. I'm currently looking for my first job in the Tech industry. I enjoy working with HTML5, CSS3, JavaScript, React & Node.js. </p>
       <ul class="list">
@@ -55,5 +57,7 @@
         <li class="list__item"><a href="https://www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
       </ul>
     </main>
+   
   </body>
+  <script src="./js/main.js" type="text/javascript"></script>
 </html>
