change github url now goes to readme

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </li>
 
         <li class="list__item">
-          <a href="https://github.com/DanielaCueto" target="blank"
+          <a href="https://github.com/DanielaCueto#--hello-world--im-daniela-salazar-cueto" target="blank"
             ><img src="./images-logos/github-alt-brands.svg" alt="Github" width="30px"
           /></a>
         </li>
