--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inspiration&family=Rock+3D&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap"
       rel="stylesheet"
     />
-
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/theme-toggles@4.10.1/css/expand.min.css"
+    />
     <title>www.danielacueto.com</title>
   </head>
   <body>
@@ -19,29 +22,66 @@
       <h1 class="title">Daniela Web Developer</h1>
     </header>
 
-    <button class="buttonmode"></button>
+    <!-- <button class="buttonmode"></button> -->
+    <label class="theme-toggle" title="Toggle theme">
+      <input type="checkbox" class="checkbox" />
+      <span class="theme-toggle-sr">Toggle theme</span>
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        aria-hidden="true"
+        width="6em"
+        height="6em"
+        fill="currentColor"
+        class="theme-toggle__expand"
+        viewBox="0 0 32 32"
+      >
+        <clipPath id="theme-toggle__expand__cutout">
+          <path d="M0-11h25a1 1 0 0017 13v30H0Z" />
+        </clipPath>
+        <g clip-path="url(#theme-toggle__expand__cutout)">
+          <circle cx="16" cy="16" r="8.4" />
+          <path
+            d="M18.3 3.2c0 1.3-1 2.3-2.3 2.3s-2.3-1-2.3-2.3S14.7.9 16 .9s2.3 1 2.3 2.3zm-4.6 25.6c0-1.3 1-2.3 2.3-2.3s2.3 1 2.3 2.3-1 2.3-2.3 2.3-2.3-1-2.3-2.3zm15.1-10.5c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3-1 2.3-2.3 2.3zM3.2 13.7c1.3 0 2.3 1 2.3 2.3s-1 2.3-2.3 2.3S.9 17.3.9 16s1-2.3 2.3-2.3zm5.8-7C9 7.9 7.9 9 6.7 9S4.4 8 4.4 6.7s1-2.3 2.3-2.3S9 5.4 9 6.7zm16.3 21c-1.3 0-2.3-1-2.3-2.3s1-2.3 2.3-2.3 2.3 1 2.3 2.3-1 2.3-2.3 2.3zm2.4-21c0 1.3-1 2.3-2.3 2.3S23 7.9 23 6.7s1-2.3 2.3-2.3 2.4 1 2.4 2.3zM6.7 23C8 23 9 24 9 25.3s-1 2.3-2.3 2.3-2.3-1-2.3-2.3 1-2.3 2.3-2.3z"
+          />
+        </g>
+      </svg>
+    </label>
+
     <main class="main">
-        <p class="main__aboutme">Hi there! I'm Daniela,  I used to be a scrub nurse and now I'm a junior front-end developer based in Lisbon, Portugal. Here you can find links to Github where I have my projects and also reach me through social media. I'm currently looking for my first job in the Tech industry. I enjoy working with HTML5, CSS3, JavaScript, React & Node.js. </p>
+      <p class="main__aboutme">
+        Hi there! I'm Daniela, I used to be a scrub nurse and now I'm a junior
+        front-end developer based in Lisbon, Portugal. Here you can find links
+        to Github where I have my projects and also reach me through social
+        media. I'm currently looking for my first job in the Tech industry. I
+        enjoy working with HTML5, CSS3, JavaScript, React & Node.js.
+      </p>
       <ul class="list">
-        
         <li class="list__item">
           <a
             class="list__item--link"
             href="mailto:danielasalazarcueto@hotmail.com"
-            ><img src="./images-logos/envelope-regular.svg" alt="Email" width="30px"
+            ><img
+              src="./images-logos/envelope-regular.svg"
+              alt="Email"
+              width="30px"
           /></a>
         </li>
 
         <li class="list__item">
-          <a href="https://github.com/DanielaCueto#--hello-world--im-daniela-salazar-cueto" target="blank"
-            ><img src="./images-logos/github-alt-brands.svg" alt="Github" width="30px"
+          <a
+            href="https://github.com/DanielaCueto#--hello-world--im-daniela-salazar-cueto"
+            target="blank"
+            ><img
+              src="./images-logos/github-alt-brands.svg"
+              alt="Github"
+              width="30px"
           /></a>
         </li>
         <li class="list__item">
           <a
             href="https://www.linkedin.com/in/danielasalazarcueto"
             target="blank"
-            >
+          >
             <img
               src="./images-logos/linkedin-in-brands.svg"
               alt="Linkedin"
@@ -49,15 +89,23 @@
           /></a>
         </li>
         <li class="list__item">
-          <a href="https://www.instagram.com/danielacuet0_" target="blank"
-            >
-            <img src="./images-logos/instagram-brands.svg" alt="Instagram" width="30px"
+          <a href="https://www.instagram.com/danielacuet0_" target="blank">
+            <img
+              src="./images-logos/instagram-brands.svg"
+              alt="Instagram"
+              width="30px"
           /></a>
         </li>
-        <li class="list__item"><a href="https://www.twitter.com/DaniCuetoN" target="blank"><img src="./images-logos/twitter-brands.svg" alt="Twitter" width="30px"></a></li>
+        <li class="list__item">
+          <a href="https://www.twitter.com/DaniCuetoN" target="blank"
+            ><img
+              src="./images-logos/twitter-brands.svg"
+              alt="Twitter"
+              width="30px"
+          /></a>
+        </li>
       </ul>
     </main>
-   
   </body>
   <script src="./js/main.js" type="text/javascript"></script>
 </html>
